# DriveVision

./: .gitignore  EVALUATION.md  README.md  finish_phase_1.md  finish_phase_2.md  finish_phase_3.md  finish_phase_4.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  pyproject.toml  requirements.txt
configs/: bdd_det.yaml  bdd_val_coco.yaml  default.yaml  phase4.yaml
dashboard/: index.html
notebooks/: README.md
scripts/: benchmark.py  convert_bdd_to_yolo.py  eval_accuracy.py
src/drivevision/perception/: detection.py  lane.py  tracking.py
tests/: test_lane.py  test_phase1.py  test_tracking.py
