[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drivevision"
version = "0.1.0"
description = "High-Performance Autonomous Driving Perception Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy ML deps — install when you wire real models (M1+)
perception = ["ultralytics>=8.2"]
# API / dashboard (M4)
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
drivevision = "drivevision.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
